--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prettier": "^1.14.0",
     "puppeteer": "^1.6.1",
     "reset-css": "^4.0.1",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "PORT=3000 supervisor --watch ./src/server.js -- ./src/server.js ./resume_content.yaml",
