--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "PORT=3000 supervisor --watch ./src/server.js -- ./src/server.js ./resume_content.yaml",
     "browser-sync": "browser-sync start --proxy 'localhost:3000' --files './src/templates/**/*,resume_content.yaml' --port 3001 --startPath '/preview'",
     "dev": "npm run start & npm run browser-sync",
-    "save": "node ./src/generatePdf.js 3000 saved/resume_`date +%Y%m%d`.pdf && open saved/resume_`date +%Y%m%d`.pdf",
+    "save": "node ./src/generatePdf.js 3000 ./saved/resume_`date +%Y%m%d`.pdf && open ./saved/resume_`date +%Y%m%d`.pdf",
     "fmt": "npm run lint -- --fix",
     "lint": "eslint ./src/"
   },
